<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_chat_robot_dark"
        android:title="@string/normal_chatbot"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/meet_item"
        android:icon="@drawable/ic_meeting_dark"
        android:title="@string/meeting"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/go_profile_item"
        android:icon="@drawable/profile_dark"
        android:title="@string/new_group"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/new_group_item"
        android:icon="@drawable/ic_group_add_dark"
        android:title="@string/new_group"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/new_broadcast_item"
        android:icon="@drawable/ic_broadcast_dark"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/invite_item"
        android:icon="@drawable/ic_person_add_dark"
        android:title="@string/invite"
        app:showAsAction="never" />


    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/ic_settings_dark"
        android:title="@string/Settings"
        app:showAsAction="never" />


</menu>