<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.hostcart.socialbot.activities.settings.ProfilePreferenceFragment"
        android:icon="@drawable/ic_account_circle_white"
        android:title="@string/pref_header_profile" />

    <header
        android:fragment="com.hostcart.socialbot.activities.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_white"
        android:title="@string/pref_header_notifications" />


    <header
        android:fragment="com.hostcart.socialbot.activities.settings.SettingsActivity$ChatSettingsPreferenceFragment"
        android:icon="@drawable/ic_chat_white"
        android:title="@string/pref_header_chat" />

    <header
        android:fragment="com.hostcart.socialbot.activities.settings.PrivacyPolicyFragment"
        android:icon="@drawable/ic_policy_light"
        android:title="@string/privacy_policy_dark" />

    <header
        android:fragment="com.hostcart.socialbot.activities.settings.AboutFragment"
        android:icon="@drawable/ic_info_white"
        android:title="@string/pref_header_about" />
</preference-headers>
