<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:fitsSystemWindows="true"
    tools:context=".activities.setup.SetupUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_username_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:textColorHint="@color/colorBlack"
                android:hint="@string/enter_your_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:lines="1"
                android:paddingRight="8dp" />


            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_img_setup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/user_img_wrapped" />


                <ProgressBar
                    android:id="@+id/progress_bar_setup_user_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/check_text_view_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/restore_backup"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_surname_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:hint="@string/enter_your_surname"
                android:textColorHint="@color/colorBlack"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:lines="1"
                android:paddingRight="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_gender_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:hint="@string/enter_your_gender"
                android:textColorHint="@color/colorBlack"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:lines="1"
                android:paddingRight="8dp" />

            <ImageButton
                android:id="@+id/ett_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="33dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                app:srcCompat="@drawable/ic_edit_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_email_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/colorBlack"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingRight="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_birthdate_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:hint="@string/enter_your_birthdate"
                android:textColorHint="@color/colorBlack"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:lines="1"
                android:paddingRight="8dp" />

            <ImageButton
                android:id="@+id/ett_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="33dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                app:srcCompat="@drawable/ic_edit_white" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_setup_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorWhite"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_check" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>